# sqigl

./: .dockerignore  .gitignore  Cargo.toml  README.md  justfile
docs/: config.toml
docs/content/concepts/: _index.md  artifacts.md  build.md  compat.toml  compatability.md  history.md  project.md  versions.md
docs/content/configuration/: _index.md
docs/content/getting-started/: _index.md  environment.md  migrating-to-sqigl.md  quickstart.md
docs/content/workflow/: _index.md
docs/filetree/: cycle.toml  empty_project.toml  empty_project_with_version.toml  implicit_deps.toml  module_deps.toml  saved.toml  script_deps.toml  simple.toml  simple2.toml  unsaved.toml
docs/sass/: _code_example.scss  _compat.scss  _filetree.scss  _index.scss  _page.scss  _text.scss  style.scss
docs/templates/: base.html  index.html  page.html  section.html
docs/templates/shortcodes/: compat.html  example.html  filetree.html
src/: arguments.rs  artifact.rs  main.rs  migration.rs  util.rs
src/actions/: apply.rs  build.rs  create.rs  mod.rs  save.rs
src/backend/: mod.rs
src/backend/postgres/: delta.rs  mod.rs
src/backend/sqlite/: delta.rs  mod.rs
src/manifest/: artifact.rs  mod.rs  module.rs  project.rs
test_cases/happy/empty/: sqigl.toml
test_cases/happy/empty2/: sqigl.toml
test_cases/happy/module_dep/: sqigl.toml
test_cases/happy/module_dep2/: sqigl.toml
test_cases/happy/module_dep_relative/: sqigl.toml
test_cases/happy/module_dep_relative2/: sqigl.toml
test_cases/happy/script_dep/: sqigl.toml
utils/: postgres.docker-compose.yaml  setup.sh
(+37 files in other folders)
