[package]
name = "sqigl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.18", features = ["derive", "env"] }
hex = "0.4.3"
log = { version = "0.4.22", features = ["std"] }
native-tls = "0.2"
postgres = "0.19.9"
postgres-native-tls = "0.5.0"
postgres_secrets = "1.0.0"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_with = { version = "3.11.0", features = ["hex"] }
sha2 = "0.10.8"
simple_logger = "5.0.0"
tempfile = "3.14.0"
thiserror = "1.0.64"
toml = "0.8.19"
toml_edit = "0.22.22"
